fix: Fix an issue where tooltip had a lower z-index and was hidden

--- a/src/components/ChatBotContainer.css
+++ b/src/components/ChatBotContainer.css
@@ -4,6 +4,7 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	line-height: 1.5;
+	z-index: 9999;
 }
 
 /* ChatBot Commons */
